--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,13 @@ before_install:
 script:
     - docker run awalom/docker-react npm run test -- --coverage
 
+deploy:
+    provider: elasticbeanstalk
+    region: "us-east-2"
+    app: "docker-react"
+    env: "DockerReact-env"
+    bucket_name: "arn:aws:s3:::elasticbeanstalk-us-east-2-296707627731"
+    bucket_path: "docker-react"
+    on:
+        branch: master
 
