--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ services:
 before_install:
     - docker build -t awalom/docker-react -f Dockerfile.dev .
 
-script:
-    - docker run awalom/docker-react npm run test -- --coverage
+
 
 deploy:
     provider: elasticbeanstalk
@@ -17,4 +16,7 @@ deploy:
     bucket_path: "docker-react"
     on:
         branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key:
+        secure: "$AWS_SECRET_KEY"
 
